--- a/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/insertarTicket.form
+++ b/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/insertarTicket.form
@@ -70,10 +70,8 @@
                   </Group>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jComboBox2" min="-2" pref="321" max="-2" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="jDateChooser1" alignment="0" pref="223" max="32767" attributes="0"/>
-                          <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="jDateChooser1" alignment="0" max="32767" attributes="0"/>
+                      <Component id="jTextField2" alignment="0" max="32767" attributes="0"/>
                       <Component id="jTextField3" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="0" pref="192" max="32767" attributes="0"/>
