--- a/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/modificarTicket.form
+++ b/BCA_TELECOMUNICACIONES/src/bca_telecomunicaciones/modificarTicket.form
@@ -70,24 +70,6 @@
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="1" attributes="0">
-                                      <Component id="jDateChooser2" max="32767" attributes="0"/>
-                                      <Component id="jTextField1" min="-2" pref="246" max="-2" attributes="0"/>
-                                      <Component id="jDateChooser1" alignment="1" min="-2" pref="246" max="-2" attributes="0"/>
-                                  </Group>
-                                  <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                                  <Component id="jButton1" min="-2" pref="101" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" attributes="0">
-                                  <Component id="jTextField2" min="-2" pref="327" max="-2" attributes="0"/>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
                           <Component id="jComboBox2" min="-2" pref="120" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="jButton2" min="-2" pref="120" max="-2" attributes="0"/>
@@ -95,6 +77,18 @@
                       </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
+                              <Group type="103" alignment="0" groupAlignment="0" attributes="0">
+                                  <Component id="jTextField2" min="-2" pref="327" max="-2" attributes="0"/>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Group type="103" groupAlignment="1" attributes="0">
+                                          <Component id="jTextField1" min="-2" pref="246" max="-2" attributes="0"/>
+                                          <Component id="jDateChooser1" alignment="1" min="-2" pref="246" max="-2" attributes="0"/>
+                                          <Component id="jDateChooser2" alignment="1" min="-2" pref="246" max="-2" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                                      <Component id="jButton1" min="-2" pref="101" max="-2" attributes="0"/>
+                                  </Group>
+                              </Group>
                               <Component id="jComboBox4" min="-2" pref="321" max="-2" attributes="0"/>
                               <Component id="jComboBox3" min="-2" pref="120" max="-2" attributes="0"/>
                           </Group>
